<resources>
    <string name="app_name">EraWorld</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="otp_verification">Mobile Verification</string>
    <string name="enter_otp">Enter received OTP</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter your name</string>
    <string name="or">OR</string>
    <string name="enter_email">Enter your email id</string>
    <string name="retype_password">Confirm your password</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_home">Home</string>
    <string name="nav_bookmark">My Bookmarks</string>
    <string name="nav_downloads">My Downloads</string>
    <string name="nav_live_tests">Live Tests</string>
    <string name="nav_classroom_courses">Classroom Courses</string>
    <string name="nav_postal_courses">Postal Courses</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="more">More</string>
    <string name="materials">Materials</string>
    <string name="mcq">MCQs</string>
    <string name="news">News</string>
    <string name="feed">Feed</string>
    <string name="nav_rate">Rate Us</string>
    <string name="nav_share">Share App</string>
    <string name="nav_change_lang">Change Language</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="recent_current">RECENT CURRENT AFFAIRS</string>
    <string name="recent_mcqs">RECENT MCQs</string>
    <string name="recent_material">RECENT STUDY MATERIALS</string>
    <string name="dummy_date">5 January 2021 MCQs Test</string>
    <string name="dummy_heading">The Indian Express e-Newspaper</string>
    <string name="cover">Cover : 0%</string>
</resources>