<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmark"
            android:title="@string/nav_bookmark" />
        <item
            android:id="@+id/nav_downloads"
            android:title="@string/nav_downloads" />
        <item
            android:id="@+id/nav_live_tests"
            android:title="@string/nav_live_tests" />
        <item
            android:id="@+id/nav_classroom_courses"
            android:title="@string/nav_classroom_courses" />
        <item
            android:id="@+id/nav_postal_courses"
            android:title="@string/nav_postal_courses" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/nav_contact_us" />
    </group>



</menu>