<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/_10sdp"
       />
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="end"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_12sdp" />


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <RelativeLayout
            android:id="@+id/id_or_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/register_button">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_20sdp"
                android:layout_toStartOf="@id/id_forget"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/id_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/or"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_20sdp"
                android:layout_toEndOf="@id/id_forget"
                android:background="@color/colorPrimary" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/id_or_layout" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>