<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/id_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_60sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"
         />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/id_logo"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:ellipsize="end"
        android:hint="@string/enter_phone"
        android:inputType="text"
        android:maxLength="13"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:ellipsize="end"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <RelativeLayout
        android:id="@+id/id_forget_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/login_button">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_20sdp"
            android:layout_toStartOf="@id/id_forget"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/id_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_20sdp"
            android:layout_toEndOf="@id/id_forget"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/id_forget_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>